Changelog for Poi
=================


1.2.4 (unreleased)
------------------

- Get the response add and edit forms working with kupu and TinyMCE
  (when ISSUE_MIME_TYPES is changed manually in config.py).  [maurits]


1.2.3 (2009-04-22)
------------------

- The html version of the emails that are sent out could contain
  warnings from the restructured text parser.  When that happens, we
  now simply put the text inside a pre tag.  [maurits]

- When email of user is not known, which can happen for example when
  this is an LDAP user, do not try to send this person an email
  Fixes http://plone.org/products/poi/issues/213
  [maurits]

- Remove stray div before DOCTYPE in add issue template. [elro]

- Registered the Poi upgrade steps for an upgrade from Poi 1.1.9
  instead of 1.1 so these steps are shown also when you upgrade from
  say Poi 1.1.2.  [maurits]


1.2.2 (2009-03-26)
------------------

- Fixed silly error in formatting an email address.  [maurits]

- Added alternative migration for old style responses that should have
  more chance to finish on a big site like plone.org.  [maurits]

- Fixed html validation error that has been around since Christmas
  2005!  Spotted by Bill Freeman.  [maurits]

- Update french translation.  [kdeldycke]


1.2.1 (2009-03-09)
------------------

- When sending an email about changes to an issue, translate those
  changes, as some of them are workflow changes, which can be
  translated.  [maurits]

- Use the global translation service to translate the text that is
  added as status message.  [maurits]

- Made it possible to translate the email messages.  Fixes
  http://plone.org/products/poi/issues/209
  [maurits]


1.2 (2009-02-23)
----------------

- In the migration from old to new style responses, also migrate the
  attachments to the responses.  [maurits]

- Added default_methods for the area and issueType fields of an issue.
  If the vocabulary of the field has only one value, we select that